--- a/src/styles.css
+++ b/src/styles.css
@@ -4,7 +4,17 @@
     font-size: 40px;
     margin: 0;
 
+    margin: auto;
     position : absolute;
     top: 300px;
-    left: 20px;
+}
+
+#about_text{
+    color: var(--black);
+    font-size: 20px;
+    margin: 0;
+
+    text-align: center;
+    position : absolute;
+    top: 400px;
 }
