--- a/src/styles.css
+++ b/src/styles.css
@@ -17,7 +17,7 @@
     font-size: 18px;
 }
 
-.projectlist {
+.tutlist {
     position: absolute;
     top: 20%;
     width: 100%;
@@ -44,4 +44,12 @@ pre code {
     border: 1px solid #999;
     display: block;
     padding: 20px;
-  }
+}
+
+.projectslist {
+    position: absolute;
+    top: 20%;
+    width: 100%;
+    text-align: center;
+    font-size: 18px;
+}
